--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,11 +9,11 @@
         "@typescript-eslint"
     ],
     "rules": {
-        "@typescript-eslint/class-name-casing": "warn",
         "@typescript-eslint/semi": "warn",
         "curly": "warn",
         "eqeqeq": "warn",
         "no-throw-literal": "warn",
-        "semi": "off"
+        "semi": "warn",
+        "no-var":"warn"
     }
 }
