--- a/package.json
+++ b/package.json
@@ -44,6 +44,31 @@
           "default": "",
           "markdownDescription": "Your unique API key for the Google Translation service. Request a key [here](https://console.developers.google.com/apis/library/translate.googleapis.com)\n_Example:ARzaSyAdUwZIyfu7FiDQiAlY5iRjHxvGlNQ3z7Y_"
         },
+        "auto-translate-json.awsRegion": {
+          "type": "string",
+          "default": "",
+          "markdownDescription": "Your AWS Region"
+        },
+        "auto-translate-json.awsAccessKeyId": {
+          "type": "string",
+          "default": "",
+          "markdownDescription": "Your AWS Access Key Id"
+        },
+        "auto-translate-json.awsSecretAccessKey": {
+          "type": "string",
+          "default": "",
+          "markdownDescription": "Your AWS Secret Access Key"
+        },
+        "auto-translate-json.azureSecretKey": {
+          "type": "string",
+          "default": "",
+          "markdownDescription": "Your Azure Secret Key"
+        },
+        "auto-translate-json.azureRegion": {
+          "type": "string",
+          "default": "",
+          "markdownDescription": "Your Azure Region"
+        },
         "auto-translate-json.mode": {
           "type": "string",
           "default": "file",
@@ -75,24 +100,30 @@
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
     "lint": "eslint src --ext ts",
+    "lint:fix": "eslint src --ext ts --fix",
     "watch": "tsc -watch -p ./",
     "pretest": "npm run compile && npm run lint",
-    "test": "node ./out/test/runTest.js"
+    "test": "node ./out/test/runTest.js",
+    "format": "prettier --config .prettierrc.json src --write"
   },
   "devDependencies": {
-    "@types/glob": "^7.1.3",
-    "@types/mocha": "^7.0.2",
-    "@types/node": "^13.13.47",
-    "@types/vscode": "^1.54.0",
-    "@typescript-eslint/eslint-plugin": "^2.30.0",
-    "@typescript-eslint/parser": "^2.30.0",
-    "eslint": "^6.8.0",
-    "glob": "^7.1.6",
-    "mocha": "^7.1.2",
-    "typescript": "^3.9.9",
-    "vscode-test": "^1.5.1"
+    "@types/glob": "^7.2.0",
+    "@types/mocha": "^9.0.0",
+    "@types/node": "^17.0.5",
+    "@types/vscode": "^1.63.1",
+    "@typescript-eslint/eslint-plugin": "^5.8.0",
+    "@typescript-eslint/parser": "^5.8.0",
+    "eslint": "^8.5.0",
+    "glob": "^7.2.0",
+    "mocha": "^9.1.3",
+    "prettier": "^2.5.1",
+    "typescript": "^4.5.4",
+    "vscode-test": "^1.6.1"
   },
   "dependencies": {
-    "@google-cloud/translate": "^6.1.0"
+    "@google-cloud/translate": "^6.3.1",
+    "@aws-sdk/client-translate": "^3.45.0",
+    "axios": "^0.24.0",
+    "uuid": "^8.3.2"
   }
 }
