--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "url": "https://github.com/codegrue/auto-translate-json"
   },
   "engines": {
-    "vscode": "^1.54.0"
+    "vscode": "^1.63.2"
   },
   "categories": [
     "Formatters"
@@ -97,14 +97,18 @@
     }
   },
   "scripts": {
-    "vscode:prepublish": "npm run compile",
+    "vscode:prepublish": "npm run esbuild-base -- --minify",
     "compile": "tsc -p ./",
     "lint": "eslint src --ext ts",
     "lint:fix": "eslint src --ext ts --fix",
     "watch": "tsc -watch -p ./",
     "pretest": "npm run compile && npm run lint",
     "test": "node ./out/test/runTest.js",
-    "format": "prettier --config .prettierrc.json src --write"
+    "format": "prettier --config .prettierrc.json src --write",
+    "esbuild-base": "esbuild ./src/extension.ts --bundle --outfile=out/main.js --external:vscode --format=cjs --platform=node",
+    "esbuild": "npm run esbuild-base -- --sourcemap",
+    "esbuild-watch": "npm run esbuild-base -- --sourcemap --watch",
+    "test-compile": "tsc -p ./"
   },
   "devDependencies": {
     "@types/glob": "^7.2.0",
@@ -113,6 +117,7 @@
     "@types/vscode": "^1.63.1",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
+    "esbuild": "^0.14.10",
     "eslint": "^8.5.0",
     "glob": "^7.2.0",
     "mocha": "^9.1.3",
@@ -121,9 +126,10 @@
     "vscode-test": "^1.6.1"
   },
   "dependencies": {
-    "@google-cloud/translate": "^6.3.1",
     "@aws-sdk/client-translate": "^3.45.0",
+    "@google-cloud/translate": "^6.3.1",
     "axios": "^0.24.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "yazl": "^2.5.1"
   }
 }
