--- a/package.json
+++ b/package.json
@@ -146,11 +146,6 @@
     "vscode-test": "^1.6.1"
   },
   "dependencies": {
-    "@aws-sdk/client-translate": "^3.45.0",
-    "@google-cloud/translate": "^6.3.1",
-    "axios": "^0.24.0",
-    "form-data": "^4.0.0",
-    "uuid": "^8.3.2",
-    "yazl": "^2.5.1"
+    "auto-translate-json-library": "^1.0.3"
   }
 }
