--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Auto Translate JSON",
   "description": "Automatically translates JSON language files to other languages using Google Translate",
   "publisher": "jeffjorczak",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "license": "MIT",
   "icon": "images/icon.png",
   "author": {
@@ -15,7 +15,7 @@
     "url": "https://github.com/codegrue/auto-translate-json"
   },
   "engines": {
-    "vscode": "^1.63.2"
+    "vscode": "^1.73.0"
   },
   "categories": [
     "Formatters"
@@ -24,7 +24,11 @@
     "translate",
     "language",
     "json",
-    "flutter"
+    "flutter",
+    "angular",
+    "ngx-translate",
+    "transloco",
+    "auto-translate-json"
   ],
   "main": "./out/extension.js",
   "activationEvents": [
@@ -131,21 +135,21 @@
     "test-compile": "tsc -p ./"
   },
   "devDependencies": {
-    "@types/glob": "^7.2.0",
-    "@types/mocha": "^9.0.0",
-    "@types/node": "^17.0.8",
-    "@types/vscode": "^1.63.1",
-    "@typescript-eslint/eslint-plugin": "^5.9.0",
-    "@typescript-eslint/parser": "^5.9.0",
-    "esbuild": "^0.14.10",
-    "eslint": "^8.6.0",
-    "glob": "^7.2.0",
-    "mocha": "^9.1.3",
-    "prettier": "^2.5.1",
-    "typescript": "^4.5.4",
-    "vscode-test": "^1.6.1"
+    "@types/glob": "^8.0.0",
+    "@types/mocha": "^10.0.0",
+    "@types/node": "^18.11.9",
+    "@types/vscode": "^1.73.0",
+    "@typescript-eslint/eslint-plugin": "^5.42.0",
+    "@typescript-eslint/parser": "^5.42.0",
+    "esbuild": "^0.15.13",
+    "eslint": "^8.27.0",
+    "glob": "^8.0.3",
+    "mocha": "^10.1.0",
+    "prettier": "^2.7.1",
+    "typescript": "^4.8.4",
+    "@vscode/test-electron": "^2.2.0"
   },
   "dependencies": {
-    "auto-translate-json-library": "^1.0.3"
+    "auto-translate-json-library": "1.1.5"
   }
 }
