--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Auto Translate JSON",
   "description": "Automatically translates JSON language files to other languages using Google Translate",
   "publisher": "jeffjorczak",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "license": "MIT",
   "icon": "images/icon.png",
   "author": {
@@ -15,7 +15,7 @@
     "url": "https://github.com/codegrue/auto-translate-json"
   },
   "engines": {
-    "vscode": "^1.73.0"
+    "vscode": "^1.78.0"
   },
   "categories": [
     "Formatters"
@@ -72,6 +72,11 @@
           "type": "string",
           "default": "",
           "markdownDescription": "Your Azure Region"
+        },
+        "auto-translate-json.openAIKey": {
+          "type": "string",
+          "default": "",
+          "markdownDescription": "Your OpenAI Secret Key"
         },
         "auto-translate-json.mode": {
           "type": "string",
@@ -150,7 +155,7 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
-    "auto-translate-json-library": "^1.1.5",
+    "auto-translate-json-library": "^1.2.0",
     "es2020": "^1.1.9"
   }
 }
