--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Auto Translate JSON",
   "description": "Automatically translates JSON language files to other languages using Google Translate",
   "publisher": "jeffjorczak",
-  "version": "1.3.4",
+  "version": "1.3.8",
   "license": "MIT",
   "icon": "images/icon.png",
   "author": {
@@ -15,7 +15,7 @@
     "url": "https://github.com/codegrue/auto-translate-json"
   },
   "engines": {
-    "vscode": "^1.83.1"
+    "vscode": "^1.87.0"
   },
   "categories": [
     "Formatters"
@@ -77,6 +77,21 @@
           "type": "string",
           "default": "",
           "markdownDescription": "Your OpenAI Secret Key"
+        },
+        "auto-translate-json.openAIBaseURL": {
+          "type": "string",
+          "default": "",
+          "markdownDescription": "Your OpenAI Base URL"
+        },
+        "auto-translate-json.openAIModel": {
+          "type": "string",
+          "default": "gpt-3.5-turbo",
+          "markdownDescription": "OpenAI model"
+        },
+        "auto-translate-json.openAIMaxTokens": {
+          "type": "number",
+          "default": 256,
+          "markdownDescription": "OpenAI max tokens"
         },
         "auto-translate-json.mode": {
           "type": "string",
@@ -146,21 +161,21 @@
   },
   "devDependencies": {
     "@types/glob": "^8.1.0",
-    "@types/mocha": "^10.0.3",
-    "@types/node": "^20.8.7",
-    "@types/vscode": "^1.83.1",
-    "@typescript-eslint/eslint-plugin": "^6.8.0",
-    "@typescript-eslint/parser": "^6.8.0",
-    "@vscode/test-electron": "^2.3.5",
-    "esbuild": "^0.19.5",
-    "eslint": "^8.51.0",
+    "@types/mocha": "^10.0.6",
+    "@types/node": "^20.11.24",
+    "@types/vscode": "^1.87.0",
+    "@typescript-eslint/eslint-plugin": "^7.1.1",
+    "@typescript-eslint/parser": "^7.1.1",
+    "@vscode/test-electron": "^2.3.9",
+    "esbuild": "^0.20.1",
+    "eslint": "^8.57.0",
     "glob": "^10.3.10",
-    "mocha": "^10.2.0",
-    "prettier": "^3.0.3",
-    "typescript": "^5.2.2"
+    "mocha": "^10.3.0",
+    "prettier": "^3.2.5",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
-    "auto-translate-json-library": "1.3.5",
+    "auto-translate-json-library": "1.3.8",
     "es2020": "^1.1.9"
   }
 }
